# create-ai-app

./: .dockerignore  .env.example  .gitignore  BLUEPRINT.md  CLAUDE.md  Dockerfile  Justfile  LICENSE  PLAN-continuous-bug-hunt.md  README.md  config.yaml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  install.sh  post_install.py
.github/workflows/: ci.yml
app/: config.py  log.py
app/adapters/: __init__.py  base.py  claude_cli_adapter.py  claude_sdk_adapter.py  factory.py
app/api/: __init__.py  auth.py  helpers.py  jobs.py  routes.py  settings.py  strategies.py
app/strategies/: __init__.py  executor.py  loader.py  models.py  templates.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  STRATEGIES.md
docs/plans/: renovate-automated-updates.md
strategies/: loop.yaml  one-shot.yaml  team.yaml  with-subagents.yaml
tests/: test_api.py  test_config.py  test_strategies.py
web/: index.html  package-lock.json  package.json  playwright.config.ts
web/e2e/: thinking-viewer-scroll.spec.ts
web/playwright-report/: index.html
web/src/: App.tsx  index.css
web/src/api/: client.ts  types.ts
web/src/components/: auth-provider.tsx  error-boundary.tsx  job-tracker.tsx  login-page.tsx  nav.tsx  result-viewer.tsx  thinking-viewer.tsx
web/src/hooks/: use-auth.ts  use-auto-scroll.ts  use-elapsed.ts  use-queries.ts  use-settings.ts  use-strategies.ts  use-theme.ts
web/src/lib/: utils.ts
web/src/pages/: home.tsx  jobs.tsx  run-job.tsx  settings.tsx  strategies.tsx  strategy-editor.tsx
(+2 files in other folders)
